fixed image alignment

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .image {
     display: flex;
     justify-content: center;
-    padding: 5rem;
+    padding-top: 5rem;
 }
 
 .card img {
